--- a/IMP/code/11_Influence_function_standard_error_NC_full.ipynb
+++ b/IMP/code/11_Influence_function_standard_error_NC_full.ipynb
@@ -9,13 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# Import libraries\n",
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
     "import time\n",
@@ -36,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -51,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -72,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -83,11 +82,11 @@
     "    explored = set()\n",
     "    activated = set()\n",
     "    nodes = []\n",
-    "    for node in detStartNodes:\n",
-    "        nodes.append(node)\n",
-    "        activated.add(node)\n",
+    "    detStart = random.choice(NC_digraph.nodes(), 1)[0]\n",
+    "    nodes.append(detStart)\n",
+    "    activated.add(detStart)\n",
     "    \n",
-    "    start = detStartNodes[0]\n",
+    "    start = detStart\n",
     "    successors = []\n",
     "\n",
     "    for i in range(t):\n",
@@ -113,46 +112,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def influenceFunctionPar(N, t=999999):\n",
-    "    runs = sc.parallelize(range(N), 4)\n",
-    "    nodes = runs.map(lambda x: random.choice(NC_digraph.nodes(), 1)[0])\n",
-    "    results = nodes.map(lambda x: influenceFunction([x], t))\n",
-    "    return np.mean(results.collect())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 68.2 ms, sys: 4.01 ms, total: 72.2 ms\n",
-      "Wall time: 1.39 s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%time test = influenceFunctionPar(100)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Mini-graph:\n",
-    "CPU times: user 19.4 ms, sys: 3.96 ms, total: 23.4 ms\n",
-    "Wall time: 21.1 ms"
+    "def influenceFunctionNotPar(N, t=999999):\n",
+    "    result = []\n",
+    "    for n in xrange(N):\n",
+    "        result.append(float(influenceFunction(t)))\n",
+    "    return np.mean(result)"
    ]
   },
   {
@@ -164,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -175,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -193,86 +163,15 @@
     }
    ],
    "source": [
-    "for k = 100\n",
-    "runs = sc.parallelize(range(100), 4)\n",
-    "results = runs.map(lambda x: activateNodesLoop(k))\n",
-    "results_list = results.collect()\n",
-    "fd = open(\"SE-NC_full-N=\" + str(k) + \".json\",\"w\")\n",
-    "json.dump(results_list, fd)\n",
-    "fd.close()\n",
-    "del results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "for k = 250\n",
-    "runs = sc.parallelize(range(100), 4)\n",
-    "results = runs.map(lambda x: activateNodesLoop(k))\n",
-    "results_list = results.collect()\n",
-    "fd = open(\"SE-NC_full-N=\" + str(k) + \".json\",\"w\")\n",
-    "json.dump(results_list, fd)\n",
-    "fd.close()\n",
-    "del results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "for k = 500\n",
-    "runs = sc.parallelize(range(100), 4)\n",
-    "results = runs.map(lambda x: activateNodesLoop(k))\n",
-    "results_list = results.collect()\n",
-    "fd = open(\"SE-NC_full-N=\" + str(k) + \".json\",\"w\")\n",
-    "json.dump(results_list, fd)\n",
-    "fd.close()\n",
-    "del results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "for k = 750\n",
-    "runs = sc.parallelize(range(100), 4)\n",
-    "results = runs.map(lambda x: activateNodesLoop(k))\n",
-    "results_list = results.collect()\n",
-    "fd = open(\"SE-NC_full-N=\" + str(k) + \".json\",\"w\")\n",
-    "json.dump(results_list, fd)\n",
-    "fd.close()\n",
-    "del results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "for k = 1000\n",
-    "runs = sc.parallelize(range(100), 4)\n",
-    "results = runs.map(lambda x: activateNodesLoop(k))\n",
-    "results_list = results.collect()\n",
-    "fd = open(\"SE-NC_full-N=\" + str(k) + \".json\",\"w\")\n",
-    "json.dump(results_list, fd)\n",
-    "fd.close()\n",
-    "del results"
+    "for k in plot_range: \n",
+    "    print k\n",
+    "    runs = sc.parallelize(range(100), 4)\n",
+    "    results = runs.map(lambda x: influenceFunctionNotPar(k))\n",
+    "    results_list = results.collect()\n",
+    "    fd = open(\"SE-NC_full-N=\" + str(k) + \".json\",\"w\")\n",
+    "    json.dump(results_list, fd)\n",
+    "    fd.close()\n",
+    "    del results"
    ]
   },
   {
