--- a/IMP/code/12_Influence_function_greedy_compare_delta_NC_full.ipynb
+++ b/IMP/code/12_Influence_function_greedy_compare_delta_NC_full.ipynb
@@ -69,6 +69,28 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24224"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(NC_digraph)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
     "collapsed": true
    },
    "outputs": [],
