Added SE for NC_full

--- a/IMP/code/13_Influence_function_all_functions_runtime.ipynb
+++ b/IMP/code/13_Influence_function_all_functions_runtime.ipynb
@@ -112,7 +112,7 @@
     "        nodes = successors\n",
     "        if not nodes:\n",
     "            break\n",
-    "    return len(activated)"
+    "    return float(len(activated))"
    ]
   },
   {
