--- a/IMP/code/13_Influence_function_all_functions_runtime.ipynb
+++ b/IMP/code/13_Influence_function_all_functions_runtime.ipynb
@@ -199,10 +199,62 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def maxNodes(graph, k=3, N=1000, t=999999):\n",
+    "    \n",
+    "    nodeRDD = sc.parallelize(list(set(list(sum(graph.edges(), ())))), 4)   \n",
+    "    infRDD = nodeRDD.map(lambda n: (n, influenceFunctionNotParDetStart(graph, [n], N)))\n",
+    "    return infRDD.takeOrdered(k, lambda w: -w[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def maxEdges(graph, k=3):\n",
+    "    \n",
+    "    nodeRDD = sc.parallelize(list(set(list(sum(graph.edges(), ())))), 4)   \n",
+    "    infRDD = nodeRDD.map(lambda n: (n, len(graph.succ[n])))\n",
+    "    return infRDD.takeOrdered(k, lambda w: -w[1])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Timing - NC_mini"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "240"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "NC_digraph_mini.number_of_nodes()"
    ]
   },
   {
@@ -405,6 +457,66 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No cap on t:\n",
+      "1.640124 seconds run time\n",
+      "\n",
+      "t capped at 10:\n",
+      "2.304997 seconds run time\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Look up nodes with max # of activations\n",
+    "noRuns = 1\n",
+    "\n",
+    "print \"No cap on t:\"\n",
+    "startTime = time.time()\n",
+    "maxNodes(NC_digraph_mini, 3, noRuns)\n",
+    "runTime = time.time() - startTime\n",
+    "print '%f seconds run time' % (runTime)\n",
+    "\n",
+    "print \"\\nt capped at 10:\"\n",
+    "startTime = time.time()\n",
+    "maxNodes(NC_digraph_mini, 3, noRuns, 10)\n",
+    "runTime = time.time() - startTime\n",
+    "print '%f seconds run time' % (runTime)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(u'NzWLMPvbEval0OVg_YDn4g', 39), (u'ts7EG6Zv2zdMDg29nyqGfA', 36), (u'VhI6xyylcAxi0wOy2HOX3w', 30)]\n",
+      "0.199740 seconds run time\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Look up nodes with max # of edges\n",
+    "startTime = time.time()\n",
+    "print maxEdges(NC_digraph_mini, 3)\n",
+    "runTime = time.time() - startTime\n",
+    "print '%f seconds run time' % (runTime)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -471,6 +583,28 @@
    "metadata": {},
    "source": [
     "### Timing - NC_full"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24224"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "NC_digraph_full.number_of_nodes()"
    ]
   },
   {
@@ -675,6 +809,66 @@
     "print \"\\nt capped at 10:\"\n",
     "startTime = time.time()\n",
     "greedySearch(NC_digraph_full, 3, noRuns, 10)\n",
+    "runTime = time.time() - startTime\n",
+    "print '%f seconds run time' % (runTime)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No cap on t:\n",
+      "488.436412 seconds run time\n",
+      "\n",
+      "t capped at 10:\n",
+      "555.493437 seconds run time\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Look up nodes with max # of activations\n",
+    "noRuns = 1\n",
+    "\n",
+    "print \"No cap on t:\"\n",
+    "startTime = time.time()\n",
+    "maxNodes(NC_digraph_full, 3, noRuns)\n",
+    "runTime = time.time() - startTime\n",
+    "print '%f seconds run time' % (runTime)\n",
+    "\n",
+    "print \"\\nt capped at 10:\"\n",
+    "startTime = time.time()\n",
+    "maxNodes(NC_digraph_full, 3, noRuns, 10)\n",
+    "runTime = time.time() - startTime\n",
+    "print '%f seconds run time' % (runTime)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(u'CvMVd31cnTfzMUsHDXm4zQ', 319), (u'NzWLMPvbEval0OVg_YDn4g', 316), (u'4G68oLRY3aHE5XUt_MUUcA', 314)]\n",
+      "108.431385 seconds run time\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Look up nodes with max # of edges\n",
+    "startTime = time.time()\n",
+    "print maxEdges(NC_digraph_full, 3)\n",
     "runTime = time.time() - startTime\n",
     "print '%f seconds run time' % (runTime)"
    ]
