updated combined file

--- a/IMP/code/IMP_combined.ipynb
+++ b/IMP/code/IMP_combined.ipynb
@@ -4,6 +4,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# AC290 EXTREME COMPUTING"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Bleeding Edge\n",
+    "\n",
+    "### Gioia Dominedo, Christian Junge, Abhishek Malali and Isadora Nun"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Overall results:"
    ]
   },
@@ -12,7 +28,10 @@
    "metadata": {},
    "source": [
     "**NC_mini (greedy algorithm with N=1,000):**\n",
-    "\n"
+    "\n",
+    "Starting nodes: [u'NzWLMPvbEval0OVg_YDn4g', u'VhI6xyylcAxi0wOy2HOX3w', u'-_1ctLaz3jhPYc12hKXsEQ']\n",
+    "\n",
+    "Average activated nodes: 46.45"
    ]
   },
   {
@@ -23,7 +42,7 @@
     "\n",
     "Starting nodes: [u'55GXsFLH4QYnTQqiijBtxA', u'HrBHqWQiP6YfGexLwAdzqQ', u'rTvFiQSg_cLHejrT1jA0UA']\n",
     "\n",
-    "Activated nodes: 8979.9599999999991"
+    "Average activated nodes: 8979.96"
    ]
   },
   {
