greedy fixed and SA for full

--- a/IMP/code/15_Influence_function_US_heuristics.ipynb
+++ b/IMP/code/15_Influence_function_US_heuristics.ipynb
@@ -45,30 +45,44 @@
     "import findspark\n",
     "import os\n",
     "findspark.init()\n",
-    "import pyspark\n",
-    "sc = pyspark.SparkContext()"
+    "# import pyspark\n",
+    "# sc = pyspark.SparkContext()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# Load network graph\n",
-    "with open(\"graph/nc_mini.json\", \"r\") as graph_data_mini:\n",
+    "with open(\"./graph/nc_mini.json\", \"r\") as graph_data_mini:\n",
     "    graph_data_mini = json.load(graph_data_mini)\n",
     "    NC_digraph_mini = json_graph.node_link_graph(graph_data_mini)\n",
     "    \n",
-    "with open(\"graph/nc_full.json\", \"r\") as graph_data_full:\n",
+    "with open(\"./graph/nc_full.json\", \"r\") as graph_data_full:\n",
     "    graph_data_full = json.load(graph_data_full)\n",
     "    NC_digraph_full = json_graph.node_link_graph(graph_data_full)\n",
     "    \n",
-    "with open(\"graph/US.json\", \"r\") as graph_data_US:\n",
-    "    graph_data_US = json.load(graph_data_US)\n",
-    "    NC_digraph_US = json_graph.node_link_graph(graph_data_US)"
+    "# with open(\"./graph/US.json\", \"r\") as graph_data_US:\n",
+    "#     graph_data_US = json.load(graph_data_US)\n",
+    "#     NC_digraph_US = json_graph.node_link_graph(graph_data_US)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "from networkx.readwrite import json_graph\n",
+    "r = requests.get('https://usgraph.blob.core.windows.net/usgraph/usgraph')\n",
+    "NC_digraph_US = json_graph.node_link_graph(r.json())"
    ]
   },
   {
